[tool.poetry]
name = "cloudflare-bypass-server"
version = "0.0.0"
description = ""
authors = []
readme = "README.md"
license = "MIT"
# TODO: Should we make this a package?
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
tornado = "^6.4"
seleniumbase = "^4.22.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
